RESOLVED FIXED50201
[chromium] REGRESSION(72470): Crash in skia on some images
https://bugs.webkit.org/show_bug.cgi?id=50201
Summary [chromium] REGRESSION(72470): Crash in skia on some images
James Robinson
Reported 2010-11-29 19:07:13 PST
[chromium] REGRESSION(72470): Crash in skia on some images
Attachments
James Robinson
Comment 1 2010-11-29 19:11:54 PST
Note You need to log in before you can comment on or make changes to this bug.