2010-11-29  James Robinson  <jamesr@chromium.org>

[chromium] REGRESSION(72470): Crash in skia on some images
        https://bugs.webkit.org/show_bug.cgi?id=50201

        Reverts r72470

        * platform/chromium-linux/svg/custom/image-rescale-expected.checksum: Removed.
        * platform/chromium-linux/svg/custom/image-rescale-expected.png: Removed.
        * platform/chromium-linux/svg/custom/image-rescale-expected.txt: Removed.
        * platform/chromium-linux/svg/custom/image-rescale-scroll-expected.checksum: Removed.
        * platform/chromium-linux/svg/custom/image-rescale-scroll-expected.png: Removed.
        * platform/chromium-linux/svg/custom/image-rescale-scroll-expected.txt: Removed.
        * platform/chromium/test_expectations.txt:
        * platform/mac/svg/custom/image-rescale-expected.checksum: Removed.
        * platform/mac/svg/custom/image-rescale-expected.png: Removed.
        * platform/mac/svg/custom/image-rescale-expected.txt: Removed.
        * platform/mac/svg/custom/image-rescale-scroll-expected.checksum: Removed.
        * platform/mac/svg/custom/image-rescale-scroll-expected.png: Removed.
        * platform/mac/svg/custom/image-rescale-scroll-expected.txt: Removed.
        * platform/mac/test_expectations.txt:
        * svg/custom/image-rescale-scroll.html: Removed.
        * svg/custom/image-rescale.svg: Removed.
        * svg/custom/resources/image-rescale.jpg: Removed.
2010-11-29  James Robinson  <jamesr@chromium.org>

        [chromium] REGRESSION(72470): Crash in skia on some images
        https://bugs.webkit.org/show_bug.cgi?id=50201

        Reverts r72470

        * platform/graphics/skia/ImageSkia.cpp:
        (WebCore::computeResamplingMode):
        (WebCore::drawResampledBitmap):

Canonical link: https://commits.webkit.org/63323@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72864 268f45cc-cd09-0410-ab3c-d52691b4dbfc